tests/ui/closures/2229_closure_analysis/multilevel-path-1.stderr
error: First Pass analysis includes:
  --> $DIR/multilevel-path-1.rs:23:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let wp = &w.p;
...  |
LL | |         println!("{}", wp.x);
LL | |     };
   | |_____^
   |
note: Capturing w[(0, 0)] -> Immutable
  --> $DIR/multilevel-path-1.rs:26:19
   |
LL |         let wp = &w.p;
   |                   ^^^

error: Min Capture analysis includes:
  --> $DIR/multilevel-path-1.rs:23:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let wp = &w.p;
...  |
LL | |         println!("{}", wp.x);
LL | |     };
   | |_____^
   |
note: Min Capture w[(0, 0)] -> Immutable
  --> $DIR/multilevel-path-1.rs:26:19
   |
LL |         let wp = &w.p;
   |                   ^^^

error: aborting due to 2 previous errors

